Added headers doc to all endpoints
